--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									<li style="padding-top: 8px; padding-bottom: 0;"><b>T</b>racking <b>W</b>ork <b>I</b>n <b>P</b>rogress</span></li>
 								</ul>
 							</li>
-							<li><span class="c5">Better equipping self for challanges of dynamically changing projects<br/>
+							<li><span class="c5">Better equipping self for challenges of dynamically changing projects<br/>
 								<ul style="list-style-type: none;">
 									<li style="padding-top: 8px; padding-bottom: 0;"><span class="c5">Hit the ground running with a head start into change management</span></li>
 								</ul>
